2006-02-22  Dariush Molavi  <dari@nukedgallery.net> 0.5.5
	* Fix: Revert change that disabled export user functionality after 
	  initial configuration.

2006-02-21  Dariush Molavi  <dari@nukedgallery.net> 0.5.4
	* New: Admin CP now detects if this is an upgrade from a pre-2.1 version, 
	  and prompts the user to upgrade accordingly.
	* Fix: Fixed bad sql query in block files (thanks kungfoo).

2006-02-21  Dariush Molavi  <dari@nukedgallery.net> 0.5.3
	* Fix: Reintroduce changes lost in merge.
	* Fix: Block files now use proper URLs.

2006-02-20  Dariush Molavi  <dari@nukedgallery.net> 0.5.2
	* Fix: Proper URL input enforced.

2006-02-20  Dariush Molavi  <dari@nukedgallery.net> 0.5.1
	* Fix: Added language file check. If the user's language file isn't in 
	  the integration package, simply use English, instead of dying.

2006-02-12  Dariush Molavi  <dari@nukedgallery.net> 0.5.0
	* Merged EMBED_API_DEV into HEAD.

2006-01-26  Dariush Molavi  <dari@nukedgallery.net> 0.5.0-b2
	* Change: Modified block files to use new EmbedAPI.

2006-01-10  Dariush Molavi  <dari@nukedgallery.net> 0.5.0-b1
	* Change: Modified all code to work with new EmbedAPI. Still need to add
	  API version checking, etc.

2006-01-26  Dariush Molavi  <dari@nukedgallery.net> 0.4.4
	* Fix: Fixed the missing "@" bug in index.php.
	* Change: New method for retrieving G2 module name in the 
	  admin cp. 
	* Fix: If G2 admin cp lang file isn't found, default to English.
	* Change: New method for detecting MOD_NAME in language files.
	* Change: New message for outdated integration package directing 
	  to the ChangeLog.
	  
2006-01-03  Dariush Molavi  <dari@nukedgallery.net> 
	* Fix: Changed ImageBlock file to include image size parameter. No version bump.

2005-12-31  Dariush Molavi  <dari@nukedgallery.net> 0.4.3
	* Fix: Modified index.php file to detect when using Nuke Evolution.  This 
	  fixes the "blank screen" issues that most Evo users experience.